--- a/src/app/details/event-details/event-details.html
+++ b/src/app/details/event-details/event-details.html
@@ -8,18 +8,18 @@
             <div class="details-section primary-section horizontal-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="event-title">Title</label>
-                    <input id="event-title" type="text" formControlName="eventTitle" />
+                    <input id="event-title" type="text" formControlName="eventTitle" placeholder="Enter event name..." />
                 </div>
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="event-date">Date</label>
-                    <input id="event-date" type="text" formControlName="eventDate" />
+                    <input id="event-date" type="text" formControlName="eventDate" placeholder="Enter event date..." />
                 </div>
             </div>
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="event-description">Description</label>
-                    <textarea id="event-description" class="medium-textarea" formControlName="eventDescription"></textarea>
+                    <textarea id="event-description" class="medium-textarea" formControlName="eventDescription" placeholder="Describe what happened during this event..."></textarea>
                 </div>
             </div>
             
@@ -71,7 +71,7 @@
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="event-tags">Tags</label>
-                    <textarea class="small-textarea" id="event-tags" formControlName="eventTags"></textarea>
+                    <textarea class="small-textarea" id="event-tags" formControlName="eventTags" placeholder="Enter tags separated by commas..."></textarea>
                 </div>
             </div>
         </section>
