--- a/src/app/details/story-details/story-details.html
+++ b/src/app/details/story-details/story-details.html
@@ -8,14 +8,14 @@
             <div class="details-section primary-section horizontal-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="story-title">Story Title</label>
-                    <input id="story-title" type="text" formControlName="storyTitle" />
+                    <input id="story-title" type="text" formControlName="storyTitle" placeholder="Enter story title..." />
                 </div>
             </div>
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="story-description">Story Description</label>
-                    <textarea id="story-description" class="large-textarea" formControlName="storyDescription"></textarea>
+                    <textarea id="story-description" class="large-textarea" formControlName="storyDescription" placeholder="Describe the plot, themes, and key events of this story..."></textarea>
                 </div>
             </div>
             
@@ -56,7 +56,7 @@
             <div class="details-section primary-section horizontal-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="story-tags">Story Tags</label>
-                    <textarea class="small-textarea" id="story-tags" formControlName="storyTags"></textarea>
+                    <textarea class="small-textarea" id="story-tags" formControlName="storyTags" placeholder="Enter tags separated by commas..."></textarea>
                 </div>
             </div>
         </section>
