--- a/src/app/components/home-row/home-row.html
+++ b/src/app/components/home-row/home-row.html
@@ -1,25 +1,59 @@
 <section class="home-row">
-  <div class="home-row-title">
-    <button class="section-title" [class]="entityType" [routerLink]="[routePath]">{{ title }}</button>
+  <div class="home-row-header">
+    <button class="home-row-title" [class]="entityType" [routerLink]="[routePath]">{{ title }}</button>
+    <div class="display-container">
+        <button [class.active]="showDate" class="display-button date" (click)="toggleDate()"></button>
+        <button [class.active]="showLocation" class="display-button location" (click)="toggleLocation()"></button>
+        <button [class.active]="showCharacters" class="display-button characters" (click)="toggleCharacters()"></button>
+        <button [class.active]="showStories" class="display-button stories" (click)="toggleStories()"></button>
+    </div>
     <button class="primary add-button" [class]="entityType" (click)="onAddElement()">Add {{ getEntityDisplayName() }}</button>
   </div>
   <div class="home-row-results">
     @if (entities.length) {
       @if (isEventList(entities)) {
         @for(worldEvent of entities; track $index) {
-          <app-event-thumbnail [worldEvent]="worldEvent"></app-event-thumbnail>
+          <app-event-thumbnail 
+            [worldEvent]="worldEvent"
+            [showDate]="showDate"
+            [showLocation]="showLocation"
+            [showCharacters]="showCharacters"
+            [showStories]="showStories"
+            (tagClicked)="onTagClick($event)">
+          </app-event-thumbnail>
         }
       } @else if (isLocationList(entities)) {
         @for(worldLocation of entities; track $index) {
-          <app-location-thumbnail [worldLocation]="worldLocation"></app-location-thumbnail>
+          <app-location-thumbnail 
+            [worldLocation]="worldLocation"
+            [showDate]="showDate"
+            [showLocation]="showLocation"
+            [showCharacters]="showCharacters"
+            [showStories]="showStories"
+            (tagClicked)="onTagClick($event)">
+          </app-location-thumbnail>
         }
       } @else if (isCharacterList(entities)) {
         @for(worldCharacter of entities; track $index) {
-          <app-character-thumbnail [worldCharacter]="worldCharacter"></app-character-thumbnail>
+          <app-character-thumbnail 
+            [worldCharacter]="worldCharacter"
+            [showDate]="showDate"
+            [showLocation]="showLocation"
+            [showCharacters]="showCharacters"
+            [showStories]="showStories"
+            (tagClicked)="onTagClick($event)">
+          </app-character-thumbnail>
         }
       } @else if (isStoryList(entities)) {
         @for(worldStory of entities; track $index) {
-          <app-story-thumbnail [worldStory]="worldStory"></app-story-thumbnail>
+          <app-story-thumbnail 
+            [worldStory]="worldStory"
+            [showDate]="showDate"
+            [showLocation]="showLocation"
+            [showCharacters]="showCharacters"
+            [showStories]="showStories"
+            (tagClicked)="onTagClick($event)">
+          </app-story-thumbnail>
         }
       }
     } @else {
