--- a/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
+++ b/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
@@ -3,14 +3,27 @@
         <h4 class="thumbnail-title">{{ worldStory().title }}</h4>
         <button class="thumbnail-delete-button" (click)="deleteStory(worldStory().id, $event)">Delete</button>
     </div>
+    
+    @if (showLocation() && worldStory().locations.length > 0) {
+        <div class="thumbnail-info">
+            <strong>Locations:</strong> {{ worldStory().locations.join(', ') }}
+        </div>
+    }
+    
+    @if (showCharacters() && worldStory().characters.length > 0) {
+        <div class="thumbnail-info">
+            <strong>Characters:</strong> {{ worldStory().characters.join(', ') }}
+        </div>
+    }
+    
     <div class="thumbnail-description">
         @for ( paragraph of worldStory().description.split('\n'); track paragraph) {
-            <p>{{ paragraph }}</p>
+            <div>{{ paragraph }}</div>
         }
     </div>
     <div class="thumbnail-tag-container">
     @for (tag of worldStory().tags; track tag) {
-        <div class="thumbnail-tags">{{ tag }}</div>
+        <div class="thumbnail-tags" (click)="onTagClick(tag, $event)">{{ tag }}</div>
     }
     </div>
 </div>
