--- a/src/app/components/thumbnail/thumbnail.css
+++ b/src/app/components/thumbnail/thumbnail.css
@@ -7,8 +7,6 @@
 .thumbnail-location::before {
   content: '📍';
   display: inline-block;
-  width: 16px;
-  height: 16px;
   margin-right: 2px;
   vertical-align: middle;
 }
@@ -16,8 +14,6 @@
 .thumbnail-characters::before {
   content: '👥';
   display: inline-block;
-  width: 16px;
-  height: 16px;
   margin-right: 2px;
   vertical-align: middle;
 }
@@ -25,8 +21,6 @@
 .thumbnail-stories::before {
   content: '📖';
   display: inline-block;
-  width: 16px;
-  height: 16px;
   margin-right: 2px;
   vertical-align: middle;
 }
@@ -34,8 +28,6 @@
 .thumbnail-date::before {
   content: '📅';
   display: inline-block;
-  width: 16px;
-  height: 16px;
   margin-right: 2px;
   vertical-align: middle;
 }
@@ -43,8 +35,6 @@
 .thumbnail-tags::before {
   content: '🏷️';
   display: inline-block;
-  width: 16px;
-  height: 16px;
   margin-right: 2px;
   vertical-align: middle;
 }
@@ -60,10 +50,13 @@
   border: 1px solid var(--g3-color);
   border-radius: 10px;
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
   
   &:hover {
-    background-color: var(--g4-color);
+    /* background-color: var(--g3-color); */
+    color: var(--g1-color);
     box-shadow: 2px 2px 5px var(--shadow-color);
+    transform: translateY(-1px);
   }
 }
 
@@ -71,6 +64,7 @@
   background: var(--g4-color);
   border-radius: 15px;
   margin: 5px;
+  height: fit-content;
   padding: 10px;
   transition: all 0.3s ease-in-out;
   
@@ -95,10 +89,18 @@
   }
 }
 
+.thumbnail-info {
+  margin: 0;
+  padding: 0;
+  font-size: x-small;
+  color: var(--g1-color);
+  /* background-color: red; */
+}
 
-.thumbnail-description {
-  margin-top: 10px;
-  margin-bottom: 10px;
+
+.thumbnail-description { 
+  margin-top: 5px;
+  margin-bottom: 5px;
   font-size: x-small;
   color: var(--g1-color);
   line-height: 1.4;
@@ -131,4 +133,16 @@
 .thumbnail-tag-container {
   display: flex;
   flex-wrap: wrap;
+}
+
+.thumbnail-info {
+  margin: 5px 0;
+  font-size: x-small;
+  color: var(--g2-color);
+  line-height: 1.3;
+}
+
+.thumbnail-info strong {
+  color: var(--g1-color);
+  font-weight: bold;
 }
