--- a/src/app/details/location-details/location-details.html
+++ b/src/app/details/location-details/location-details.html
@@ -8,14 +8,14 @@
             <div class="details-section primary-section horizontal-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="location-title">Location Title</label>
-                    <input id="location-title" type="text" formControlName="locationTitle" />
+                    <input id="location-title" type="text" formControlName="locationTitle" placeholder="Enter location name..." />
                 </div>
             </div>
             
             <div class="details-section primary-section spanning-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="location-description">Location Description</label>
-                    <textarea id="location-description" class="medium-textarea" formControlName="locationDescription"></textarea>
+                    <textarea id="location-description" class="medium-textarea" formControlName="locationDescription" placeholder="Describe this location, its appearance, atmosphere, and significance..."></textarea>
                 </div>
             </div>
             
@@ -53,7 +53,7 @@
             <div class="details-section primary-section horizontal-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="location-tags">Location Tags</label>
-                    <textarea class="small-textarea" id="location-tags" formControlName="locationTags"></textarea>
+                    <textarea class="small-textarea" id="location-tags" formControlName="locationTags" placeholder="Enter tags separated by commas..."></textarea>
                 </div>
             </div>
         </section>
