--- a/src/app/details/location-details/location-details.html
+++ b/src/app/details/location-details/location-details.html
@@ -50,6 +50,24 @@
                 </div>
             </div>
             
+            <div class="details-section primary-section spanning-section">
+                <div class="details-section secondary-section">
+                    <label class="primary-label" for="location-related-locations">Related Locations</label>
+                    <div class="vertical-section">
+                        @for(location of locationList; track location) {
+                            @if(worldLocation?.id !== location.id) {
+                                <div class="form-field">
+                                    <input type="checkbox" id="related-location-checkbox-{{location.id}}" [value]="location.id" (change)="onRelatedLocationChange($event, location)" [checked]="isRelatedLocationInLocation(location.name)" />
+                                    <button class="linked-location" [routerLink]="['/location', location.id]" type="button">
+                                        <label class="secondary-label">{{ location.name }}</label>
+                                    </button>
+                                </div>
+                            }
+                        }
+                    </div>
+                </div>
+            </div>
+            
             <div class="details-section primary-section horizontal-section">
                 <div class="details-section secondary-section">
                     <label class="primary-label" for="location-tags">Location Tags</label>
