--- a/src/app/pages/character-home/character-home.html
+++ b/src/app/pages/character-home/character-home.html
@@ -9,17 +9,13 @@
     (filterChange)="onFilterChange($event)">
   </app-search-filter>
   
-  <button class="primary" (click)="addWorldCharacter()">Add Character</button>
-
-  <section class="results grid-section">
-    @if (filteredCharacterList.length) {
-      @for (worldCharacter of filteredCharacterList; track worldCharacter.id) {
-        <app-character-thumbnail [worldCharacter]="worldCharacter"></app-character-thumbnail>
-      }
-    } @else {
-      <div class="no-results">
-        <p>No characters found. Try adjusting your search or add a new character.</p>
-      </div>
-    }
-  </section>
+  <app-home-row
+    entityType="character"
+    title="Characters"
+    routePath="/characters"
+    [entities]="filteredCharacterList"
+    noResultsMessage="No characters found. Try adjusting your search or add a new character."
+    (addElement)="addWorldCharacter()"
+    (tagClicked)="onTagClicked($event)">
+  </app-home-row>
 </article>
