--- a/src/app/components/thumbnail/event-thumbnail/event-thumbnail.html
+++ b/src/app/components/thumbnail/event-thumbnail/event-thumbnail.html
@@ -33,7 +33,7 @@
 
     <div class="thumbnail-tag-container">
         @for (tag of worldEvent().tags; track tag) {
-            <div class="thumbnail-tags" (click)="onTagClick(tag, $event)">{{ tag }}</div>
+            <div class="tag" (click)="onTagClick(tag, $event)">{{ tag }}</div>
         }
     </div>
 </div>
