--- a/src/app/components/thumbnail/location-thumbnail/location-thumbnail.html
+++ b/src/app/components/thumbnail/location-thumbnail/location-thumbnail.html
@@ -27,7 +27,7 @@
     </div>
     <div class="thumbnail-tag-container">
     @for (tag of worldLocation().tags; track tag) {
-        <div class="thumbnail-tags" (click)="onTagClick(tag, $event)">{{ tag }}</div>
+        <div class="tag" (click)="onTagClick(tag, $event)">{{ tag }}</div>
     }
     </div>
 </div>
