--- a/src/app/components/home-row/home-row.css
+++ b/src/app/components/home-row/home-row.css
@@ -1,5 +1,9 @@
 /* Home Row Component Styles */
-
+.home-row {
+    /* width: 100%; */
+    display: flex;
+    flex-direction: column;
+}
 .home-row-header {
   font: italic;
   display: flex;
@@ -73,36 +77,37 @@
 }
 
 .display-container button {
-  border: 1px solid var(--g2-color);
-  background-color: var(--g4-color);
-  color: var(--g1-color);
-  padding: 4px 8px;
-  border-radius: 8px;
-  font-size: 12px;
-  font-weight: normal;
-  cursor: pointer;
-  transition: all 0.2s ease;
+    border: 1px solid var(--g2-color);
+    background-color: var(--g4-color);
+    color: var(--g1-color);
+    padding: 4px 8px;
+    border-radius: 8px;
+    font-size: 12px;
+    font-weight: normal;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    
+    &:hover {
+        background-color: var(--g3-color);
+    }
+    &.active {
+    background-color: var(--g1-color);
+    color: var(--g5-color);
+    font-weight: bold;
+    }
 }
 
-.display-container button:hover {
-  background-color: var(--g3-color);
-}
 
-.display-container button.active {
-  background-color: var(--g1-color);
-  color: var(--g5-color);
-  font-weight: bold;
-}
 
 .add-button {
   background: var(--g1-color);
 }
 
-.add-button::after {
+.toggle-button::after {
   content: '+';
   display: inline-block;
-  width: 16px;
-  height: 16px;
+  width: 1rem;
+  height: 1rem;
   margin-left: 5px;
   vertical-align: middle;
 }
