--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -58,7 +58,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
-  max-height: 200px;
+  max-height: 12.5rem;
   overflow-y: auto;
   padding: 10px;
   border: 1px solid var(--g4-color);
@@ -105,7 +105,7 @@
   color: var(--g1-color);
   cursor: pointer;
   transition: all 0.3s ease;
-  width: 150px;
+  width: 9.375rem;
 }
 
 .date-input:focus {
