--- a/src/styles.css
+++ b/src/styles.css
@@ -272,7 +272,7 @@ textarea, input[type="text"] {
 
 input[type="text"] {
   padding: 10px;
-  width: 300px;
+  width: 18.75rem;
 
   &:required::after {
     content: "*";
@@ -287,18 +287,18 @@ textarea {
   resize: none;
 
   &.small-textarea {
-    min-width: 200px;
-    min-height: 50px;
+    min-width: 12.5rem;
+    min-height: 3.125rem;
   }
   
   &.medium-textarea {
-    min-width: 400px;
-    min-height: 150px;
+    min-width: 25rem;
+    min-height: 9.375rem;
   }
 
   &.large-textarea {
-    min-width: 500px;
-    min-height: 300px;
+    min-width: 31.25rem;
+    min-height: 18.75rem;
   }
 
 }
@@ -312,28 +312,25 @@ textarea {
    SCROLLBAR STYLES
    ============================================================================ */
 /* Scrollbar width */
+
 ::-webkit-scrollbar {
-  background: transparent;
-  width: 10px;
-  height: 10px;
+  height: 0.5rem;
 }
 
-/* Scrollbar track */
 ::-webkit-scrollbar-track {
-  background: transparent;
-  border-radius: 15px;
+  background: var(--g4-color);
+  border-radius: 0.25rem;
 }
 
-/* Scrollbar handle */
 ::-webkit-scrollbar-thumb {
-  background-color: var(--b4-color);
-  border-radius: 15px;
+  background: var(--event-color);
+  border-radius: 0.25rem;
 }
 
-/* Scrollbar handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--b3-color);
+  background: var(--g1-color);
 }
+
 
 /* ============================================================================
    CONTENT COMPONENTS
@@ -439,6 +436,37 @@ textarea {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 15px;
+}
+
+/* ===========================================================================
+   TAG STYLES
+   ============================================================================ */
+
+.tag {
+  display: inline-block;
+  width: fit-content;
+  margin: 0.0625rem;
+  padding: 0.1875rem 0.5rem 0.1875rem 0.1875rem;
+  font-size: x-small;
+  font-style: italic;
+  color: var(--b2-color);
+  border: 0.0625rem solid var(--g3-color);
+  border-radius: 0.625rem;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+
+  &::before {
+    content: '🏷️';
+    display: inline-block;
+    margin-right: 0.125rem;
+    vertical-align: middle;
+  }
+
+  &:hover {
+    color: var(--g1-color);
+    box-shadow: 0.125rem 0.125rem 0.3125rem var(--shadow-color);
+    transform: translateY(-0.0625rem);
+  }
 }
 
 /* ===========================================================================
