--- a/src/app/components/timeline/timeline/timeline.html
+++ b/src/app/components/timeline/timeline/timeline.html
@@ -3,7 +3,7 @@
     <h2 class="timeline-title">{{ title }}</h2>
     <div class="timeline-controls">
       <div class="display-container">
-        <button [class.active]="showDate" class="display-button date" (click)="toggleDate()"></button>
+        <!-- <button [class.active]="showDate" class="display-button date" (click)="toggleDate()"></button> -->
         <button [class.active]="showLocation" class="display-button location" (click)="toggleLocation()"></button>
         <button [class.active]="showCharacters" class="display-button characters" (click)="toggleCharacters()"></button>
         <button [class.active]="showStories" class="display-button stories" (click)="toggleStories()"></button>
